...
          minVerticalPadding: MunaStyles.distancePrimary,
          horizontalTitleGap: MunaStyles.distancePrimary,

          // The Song's Title
          title: Text(
            songData.trackName,
            key: const Key('song-title'),
            style: _theme.textTheme.bodyText2?.copyWith(
              color: _isSelected ? _theme.colorScheme.primaryContainer : null,
            ),
            overflow: TextOverflow.ellipsis,
          ),

...
            ],
          ),

          // The Song's Active Indicator
          trailing: _isSelected
              ? SizedBox(
                  key: const Key('song-active-indicator'),
                  width: _defaultIconSize,
                  height: _defaultIconSize,
                  child: Icon(
                    Icons.music_note,
                    size: _defaultIconSize,
                    color: _theme.colorScheme.primary,
...
