...
                      ? Icon(
                          Icons.search,
                          color: _defaultContentColor.withOpacity(.7),
                        )
                      : Icon(
                          Icons.close,
                          key: const Key('search-field-clear'),
                          color: _defaultContentColor,
                        ),
                  onPressed: () {
                    _onClearIconPressed(_searchKeyword);
                  },
                ),
...
